feat(coures): 课程详情页

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,10 +1,10 @@
 :root {
   // ⾊板
   --cp-primary: #345dc2;
-  --cp-plain: #f8f6fc;
+  --cp-plain: #f8f9fb;
   --cp-orange: #FCA21C;
   --cp-text1: #65b0ff;
-  --cp-text2: #555555;
+  --cp-text2: #444444;
   --cp-text3: #f8f8f8;
   --cp-text4:#94979c;
   --cp-tag: #848484;
@@ -12,8 +12,8 @@
   --cp-tip: #C3C3C5;
   --cp-disable: #D9DBDE;
   --cp-line: #EDEDED;
-  --cp-bg: #F6F7F9;
-  --cp-price: #EB5757;
+  --cp-bg: #345dc2;
+  --cp-price: #fa3c1f;
   // 覆盖vant主体⾊
   --van-primary-color: var(--cp-primary);
   // 单元格上下间距
@@ -26,7 +26,7 @@
 
 body {
   font-size: 14px;
-  color: var(--cp-text2)
+  color: var(--cp-text2);
 }
 
 a {
